--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "deploy-feedback-app",
+  "homepage": "https://hyc0812.github.io/deploy-feedback-app",
   "version": "0.1.0",
   "private": true,
   "proxy":"https://my-json-server.typicode.com/hyc0812/deploy-feedback-app-jsonserver",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
